[gd_scene load_steps=8 format=2]

[ext_resource path="res://grid/Grid.tscn" type="PackedScene" id=1]
[ext_resource path="res://grid/precision/GridPrecision.gd" type="Script" id=2]
[ext_resource path="res://grid/Piece.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/ChessSettings.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/StreakPanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/SessionPanelFreeplay.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/Countdown.tscn" type="PackedScene" id=9]

[node name="GridPrecision" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="MarginContainer" parent="HBoxContainer" index="0"]
margin_bottom = 873.0

[node name="VBoxContainer" parent="HBoxContainer" index="1"]
margin_top = 0.0
margin_bottom = 873.0

[node name="HBoxContainer" parent="HBoxContainer/VBoxContainer" index="1"]
margin_bottom = 821.0

[node name="Toolbar" parent="HBoxContainer/VBoxContainer/HBoxContainer" index="1"]
margin_bottom = 737.0

[node name="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Toolbar" index="0"]
margin_bottom = 722.0

[node name="SessionPanelFreeplay" parent="HBoxContainer/VBoxContainer/HBoxContainer/Toolbar/VBoxContainer" index="0" instance=ExtResource( 8 )]
margin_right = 444.0
margin_bottom = 266.0

[node name="RecordPanel" parent="HBoxContainer/VBoxContainer/HBoxContainer/Toolbar/VBoxContainer" index="1" instance=ExtResource( 7 )]
margin_top = 291.0
margin_right = 444.0
margin_bottom = 489.0
title = "Best"

[node name="ChessSettings" parent="HBoxContainer/VBoxContainer/HBoxContainer/Toolbar/VBoxContainer" index="2" instance=ExtResource( 4 )]
margin_top = 514.0
margin_right = 444.0
margin_bottom = 652.0
size_flags_vertical = 10

[node name="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/Toolbar/VBoxContainer" index="3"]
margin_top = 677.0
margin_bottom = 707.0

[node name="BotMargin" parent="HBoxContainer/VBoxContainer" index="2"]
margin_top = 825.0
margin_bottom = 873.0

[node name="TargetLabel" type="Label" parent="TopBar" index="0"]
margin_bottom = 32.0

[node name="ClickCountLabel" type="Label" parent="TopBar" index="1"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 32.0
size_flags_horizontal = 6

[node name="TimeLabel" type="Label" parent="TopBar" index="2"]
visible = false
margin_left = 8.0
margin_right = 8.0
margin_bottom = 32.0
size_flags_horizontal = 10

[node name="Countdown" parent="CenterOverlay" index="0" instance=ExtResource( 9 )]
margin_right = 72.0
margin_bottom = 72.0

[node name="TakePiece" parent="." index="4" instance=ExtResource( 3 )]
active = 0

[node name="ActivePiece" parent="." index="5" instance=ExtResource( 3 )]
[connection signal="countdown_finished" from="CenterOverlay/Countdown" to="." method="_on_Countdown_countdown_finished"]
[connection signal="released" from="ActivePiece" to="." method="_on_ActivePiece_released"]
